--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "@mui/material": "^5.12.1",
     "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -27,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-react": "^7.22.0",
+    "@testing-library/react": "^14.0.0",
+    "axios": "^1.4.0",
+    "babel-jest": "^29.5.0",
+    "jest": "^27.5.1"
   }
 }
